# dataset-converter-fiftyone

./: .gitignore  pyproject.toml  requirements.txt
config/: coco2yolo.toml  config.toml  voc2yolo.toml
ds_converter/: config.py  custom_loader.py  exception.py  main.py  schemas.py  vis.py
ds_converter/datasets/: __init__.py  custom_loader.py  registry_dataset.py
tests/: test.py  test_registry.py
